# drgb-server

./: .gitignore  .gitmodules  README.md  test.txt
docker/: Dockerfile  Dockerfile-Env  Dockerfile-web  docker-compose.yml  initdb.sh  initdb.sql
docker/ClientBuild/: index.html
docker/ClientBuild/StreamingAssets/: nameList.csv  serverList.csv
source/: CMakeLists.txt
source/auth/: CMakeLists.txt  MyAuth.cpp  MyAuth.hpp  main.cpp
source/battle/: BattleServiceClient.cpp  BattleServiceClient.hpp  CMakeLists.txt  MyBattle.cpp  MyBattle.hpp  MyGame.cpp  MyGame.hpp  main.cpp
source/manager/: CMakeLists.txt  ManagerServiceClient.cpp  ManagerServiceClient.hpp  ManagerServiceServer.cpp  ManagerServiceServer.hpp  MgrOpt.cpp  MgrOpt.hpp  main.cpp
source/match/: CMakeLists.txt  MatchServiceServer.cpp  MatchServiceServer.hpp  MyMatch.cpp  MyMatch.hpp  MyMatchMaker.cpp  MyMatchMaker.hpp  MyNotifyMsgs.hpp  main.cpp
source/network/: CMakeLists.txt  MyClientSocket.cpp  MyClientSocket.hpp  MyConnectee.cpp  MyConnectee.hpp  MyConnector.cpp  MyConnector.hpp  MyConnectorPool.cpp  MyConnectorPool.hpp  MyServerSocket.cpp  MyServerSocket.hpp  MyTCPClient.cpp  MyTCPClient.hpp  MyTCPServer.cpp  MyTCPServer.hpp  MyTCPTLSClient.cpp  MyTCPTLSClient.hpp  MyTCPTLSServer.cpp  MyTCPTLSServer.hpp  MyWebsocketClient.cpp  MyWebsocketClient.hpp  MyWebsocketServer.cpp  MyWebsocketServer.hpp  MyWebsocketTLSClient.cpp  MyWebsocketTLSClient.hpp  MyWebsocketTLSServer.cpp  MyWebsocketTLSServer.hpp
source/package/: build.sh
source/postgres/: CMakeLists.txt  MyPostgres.cpp  MyPostgres.hpp  MyPostgresPool.cpp  MyPostgresPool.hpp
source/proto/: CMakeLists.txt  ServerService.proto
source/redis/: CMakeLists.txt  MyRedis.cpp  MyRedis.hpp  MyRedisReply.cpp  MyRedisReply.hpp
source/resources/: docker-entrypoint.sh  drgb-openrc.sh  drgb-syslog-ng.conf  drgb-systemd.sh  drgb.conf  drgb.csr  drgb.key
source/security/: CMakeLists.txt  Encryptor.cpp  Encryptor.hpp  Hasher.cpp  Hasher.hpp  KeyExchanger.cpp  KeyExchanger.hpp
source/templates/: CMakeLists.txt  MyMain.cpp  MyMain.hpp  MyServer.cpp  MyServer.hpp  MyServerOpt.cpp  MyServerOpt.hpp
source/test/: CMakeLists.txt  ConfigParser_Test.cc  Connector_Test.cc  Daemonizer_Test.cc  Encoder_Test.cc  Expected_Test.cc  Invoker_Test.cc  Notifier_Test.cc  PacketProcessor_Test.cc  Socket_Test.cc
source/test_stress/: CMakeLists.txt  TestClient.cpp  TestClient.hpp  TestOpt.cpp  TestOpt.hpp  main.cpp
source/test_unit/: BoostTimer_Test.cc  ByteQueue_Test.cc  CMakeLists.txt  ConfigParser_Test.cc  ConfigParser_Test_Resource.conf  DeMap_Test.cc  Encryptor_Test.cc  ErrorCode_Test.cc  Game_Test.cc  GetArg_Test.cc  Hasher_Test.cc  MatchMaker_Test.cc  PacketProcessor_Test.cc  RPC_Test.cc  Redis_Test.cc  Socket_Test.cc  StackTraceExcept_Test.cc  ThreadExceptHandler_Test.cc  TimerPool_Test.cc
source/threads/: CMakeLists.txt  FixedPool.hpp  Pool.cpp  Pool.hpp  PoolElement.hpp  Thread.cpp  Thread.hpp  ThreadExceptHandler.cpp  ThreadExceptHandler.hpp  TimerPool.cpp  TimerPool.hpp  VariadicPool.hpp
source/utils/: ByteQueue.cpp  ByteQueue.hpp  CMakeLists.txt  ConfigParser.cpp  ConfigParser.hpp  Daemonizer.cpp  Daemonizer.hpp  DeMap.hpp  Encoder.cpp  Encoder.hpp  ErrorCode.cpp  ErrorCode.hpp  Expected.hpp  GetArg.cpp  GetArg.hpp  Hasher.cpp  Hasher.hpp  Invoker.hpp  Logger.cpp  Logger.hpp  MyBase64.cpp  MyBase64.hpp  MyBytes.cpp  MyBytes.hpp  MyCodes.hpp  MyConfigParser.cpp  MyConfigParser.hpp  MyCrypto.cpp  MyCrypto.hpp  MyDaemoner.cpp  MyDaemoner.hpp  MyDeMap.hpp  MyExcepts.cpp  MyExcepts.hpp  MyExpected.hpp  MyGetOpt.cpp  MyGetOpt.hpp  MyInvoker.hpp  MyLogger.cpp  MyLogger.hpp  (+11 more)
