SET ( TARGET auth )
SET ( LIBS 
	MyAuth
)

FOREACH ( LIB IN LISTS LIBS )
	ADD_LIBRARY ( ${LIB} ${LIB}.cpp ${LIB}.hpp )
ENDFOREACH()

ADD_EXECUTABLE ( ${TARGET} main.cpp )
SET_TARGET_PROPERTIES ( ${TARGET} PROPERTIES OUTPUT_NAME ${PROJECT_NAME}-${TARGET} )

TARGET_LINK_LIBRARIES ( MyAuth PUBLIC
	ConfigParser
	MyServer
	MyPostgres
	Encoder
	MyConnector
	#MyCodes	#Header-Only
	Hasher
)

TARGET_LINK_LIBRARIES ( ${TARGET} PRIVATE MyAuth MyMain)

UNSET ( TARGET )
UNSET ( LIBS )