SET ( TARGET auth )
SET ( LIBS 
	MyAuth
)

FOREACH ( LIB IN LISTS LIBS )
	IF ( EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${LIB}.cpp" )
		ADD_LIBRARY( ${LIB} EXCLUDE_FROM_ALL ${LIB}.cpp ${LIB}.hpp )
	ELSE()
		ADD_LIBRARY( ${LIB} INTERFACE EXCLUDE_FROM_ALL ${LIB}.hpp )
	ENDIF()
ENDFOREACH()

ADD_EXECUTABLE ( ${TARGET} main.cpp )
SET_TARGET_PROPERTIES ( ${TARGET} PROPERTIES OUTPUT_NAME ${PROJECT_NAME}-${TARGET} )

TARGET_LINK_LIBRARIES ( MyAuth PUBLIC
	ConfigParser
	MyServer
	MyPostgres
	Encoder
	MyConnector
	MyCodes
	Hasher
)

TARGET_LINK_LIBRARIES ( ${TARGET} PRIVATE MyAuth MyMain )

UNSET ( TARGET )
UNSET ( LIBS )