SET ( TARGET battle )
SET ( LIBS
	MyBattle
	MyGame
)

FOREACH ( LIB IN LISTS LIBS )
	IF ( EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${LIB}.cpp" )
		ADD_LIBRARY( ${LIB} EXCLUDE_FROM_ALL ${LIB}.cpp ${LIB}.hpp )
	ELSE()
		ADD_LIBRARY( ${LIB} INTERFACE EXCLUDE_FROM_ALL ${LIB}.hpp )
	ENDIF()
ENDFOREACH()

ADD_EXECUTABLE ( ${TARGET} main.cpp )
SET_TARGET_PROPERTIES ( ${TARGET} PROPERTIES OUTPUT_NAME ${PROJECT_NAME}-${TARGET} )

TARGET_LINK_LIBRARIES ( MyGame PUBLIC
	MyCodes
	MyPostgres
	MyClientSocket
)

TARGET_LINK_LIBRARIES ( MyBattle PUBLIC
	MyServer
	MyGame
	DeMap
	MyConnector
	MyConnectee
)

TARGET_LINK_LIBRARIES ( ${TARGET} PRIVATE
	MyMain
	MyBattle
)

UNSET ( TARGET )
UNSET ( LIBS )