SET ( TARGET match )
SET ( LIBS
	MyMatch
	MyMatchMaker
	MyNotifyMsgs
)

FOREACH ( LIB IN LISTS LIBS )
	IF ( EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${LIB}.cpp" )
		ADD_LIBRARY( ${LIB} EXCLUDE_FROM_ALL ${LIB}.cpp ${LIB}.hpp )
	ELSE()
		ADD_LIBRARY( ${LIB} INTERFACE EXCLUDE_FROM_ALL ${LIB}.hpp )
	ENDIF()
ENDFOREACH()

ADD_EXECUTABLE ( ${TARGET} main.cpp )
SET_TARGET_PROPERTIES ( ${TARGET} PROPERTIES OUTPUT_NAME ${PROJECT_NAME}-${TARGET} )

TARGET_LINK_LIBRARIES ( MyNotifyMsgs INTERFACE 
	ByteQueue
	Notifier
)

TARGET_LINK_LIBRARIES ( MyMatchMaker PUBLIC
	MyTypes
)

TARGET_LINK_LIBRARIES ( MyMatch PUBLIC
	MyServer
	MyConnectee
	MyConnector
	ConfigParser
	MyCodes
	MyMatchMaker
	MyNotifyMsgs
	MyPostgres
)

TARGET_LINK_LIBRARIES ( ${TARGET} PRIVATE
	MyMatch
	MyMain
)
UNSET ( TARGET )
UNSET ( LIBS )