SET ( LIB_NAME MyPostgres )

FIND_LIBRARY ( PQXX pqxx REQUIRED )
FIND_LIBRARY ( PQ pq REQUIRED )

ADD_LIBRARY ( ${LIB_NAME} EXCLUDE_FROM_ALL ${LIB_NAME}.cpp ${LIB_NAME}.hpp )

TARGET_LINK_LIBRARIES ( ${LIB_NAME} PUBLIC
	${PQXX}
	${PQ}
	ConfigParser
)
TARGET_COMPILE_OPTIONS ( ${LIB_NAME} PUBLIC
	-std=c++17
)