SET ( LIBS
	MyPostgresPool
	MyPostgres 
)

FIND_LIBRARY ( PQXX pqxx REQUIRED )
FIND_LIBRARY ( PQ pq REQUIRED )

FOREACH ( LIB IN LISTS LIBS )
	ADD_LIBRARY ( ${LIB} EXCLUDE_FROM_ALL ${LIB}.cpp ${LIB}.hpp )
	TARGET_COMPILE_OPTIONS ( ${LIB} PUBLIC -std=c++17 )
ENDFOREACH()

TARGET_LINK_LIBRARIES ( MyPostgresPool PUBLIC
	MyPostgres
)
TARGET_LINK_LIBRARIES ( MyPostgres PUBLIC
	${PQXX}
	${PQ}
	ConfigParser
	Logger
	Hasher
	Encoder
)

UNSET ( LIBS )