SET ( LIBS
	KeyExchanger
	Encryptor
	Hasher
)

FOREACH( LIB IN LISTS LIBS )
	IF ( EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${LIB}.cpp" )
		ADD_LIBRARY( ${LIB} EXCLUDE_FROM_ALL ${LIB}.cpp ${LIB}.hpp )
	ELSE()
		ADD_LIBRARY( ${LIB} INTERFACE EXCLUDE_FROM_ALL ${LIB}.hpp )
	ENDIF()
ENDFOREACH()

FIND_PACKAGE ( OpenSSL REQUIRED )

TARGET_INCLUDE_DIRECTORIES ( KeyExchanger PUBLIC ${OPENSSL_INCLUDE_DIR} )
TARGET_LINK_LIBRARIES ( KeyExchanger PUBLIC ${OPENSSL_LIBRARIES} StackTraceExcept Expected )
TARGET_INCLUDE_DIRECTORIES ( Encryptor PUBLIC ${OPENSSL_INCLUDE_DIR} )
TARGET_LINK_LIBRARIES ( Encryptor PUBLIC ${OPENSSL_LIBRARIES} StackTraceExcept MyTypes )
TARGET_INCLUDE_DIRECTORIES ( Hasher PUBLIC ${OPENSSL_INCLUDE_DIR} )
TARGET_LINK_LIBRARIES ( Hasher PUBLIC ByteQueue ${OPENSSL_LIBRARIES} )

UNSET ( LIBS )